Minor improvments in code readability

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container">
   <canvas id="myCanvas" width="480" height="320"></canvas>
 
-  <p>Pres right or left keysfrom yur kyboard</p>
+  <p>Pres 'right' or 'left' keys from your kyboard to control paddle</p>
   </div>
 
 
